Design game menu finished

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,5 +2,6 @@
   <div id="screen">
     <router-outlet />
   </div>
+  <p class="italic" >PUNTO JSON {{ '{' }}.json {{ '}' }}</p>
   <app-gamepad/>
 </div>
