--- a/src/app/components/gamepad/gamepad.component.html
+++ b/src/app/components/gamepad/gamepad.component.html
@@ -1,19 +1,21 @@
 <div id="container" class="flex-column">
-  <div id="buttons-container">
+  <div id="buttons-container" class="flex-apart">
     <div id="d-pad-container">
       <div></div>
       <div></div>
     </div>
     <div id="x-o-container">
-      <div class="round-button"><span>X</span></div>
-      <div class="round-button"><span>O</span></div>
+      <div id="x-o-border-container" class="flex-apart">
+        <div class="round-button"><span>X</span></div>
+        <div class="round-button"><span>O</span></div>
+      </div>
     </div>
   </div>
   <div id="buttons-start-container">
     <div class="large-button"><span>SELECT</span></div>
     <div class="large-button"><span>START</span></div>
   </div>
-  <div id="parlat-container">
+  <div id="parlant-container">
     <div></div>
     <div></div>
     <div></div>
