--- a/src/app/pages/change-name/change-name.component.html
+++ b/src/app/pages/change-name/change-name.component.html
@@ -1,4 +1,4 @@
-<form (ngSubmit)="changeName(name.value)" #form="ngForm">
+<form (ngSubmit)="changeNameAndReturn(name.value)" #form="ngForm">
   <label for="name">Ingresa tu nombre</label>
   <input type="text" id="name" name="name" #name required ngModel maxlength="20">
   <button [disabled]="form.invalid">Cambiar nombre</button>
@@ -6,4 +6,3 @@
 </form>
 
 <a [routerLink]="['/']">Volver</a>
-<h2>{{userService.name()}}</h2>
